--- a/assets/styles/components/_design.scss
+++ b/assets/styles/components/_design.scss
@@ -1,12 +1,22 @@
 .design{
     height: 95vh;
     position: relative;
-    background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/design.png');
+    background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/design-small.png');
     background-size: cover;
     background-repeat: no-repeat;
     padding: 15rem;
     display: flex;
     margin-top: 20rem;
+
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
+    only screen and (-webkit-min-device-pixel-ration: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
+        background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/design.png');
+    }
+
+    @include respond(tab-port){
+        padding: 5rem;
+    }
 
     @include respond(phone){
         padding: 2rem;
@@ -25,6 +35,13 @@
         transform: translateY(-50%);
         left: 30%;
         position: absolute;
+
+        @include respond(tab-port){
+            width: 100%;
+            position: relative;
+            left: 0;
+            padding: 18rem;
+        }
 
         @include respond(phone){
             width: 100%;
