--- a/assets/styles/components/_picture-box.scss
+++ b/assets/styles/components/_picture-box.scss
@@ -7,6 +7,7 @@
     &__picture{
         display: block;
         max-width: 65rem;
+        width: 100%;
         height: 45rem;
         object-fit: cover;
         box-shadow: 0rem 0rem 2rem 1px rgba(0, 0, 0, 0.2);
