--- a/assets/styles/components/_backgrounds-container.scss
+++ b/assets/styles/components/_backgrounds-container.scss
@@ -25,11 +25,9 @@
 			background-color: $color-white;
 		}
 
-		@media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
-		only screen and (-webkit-min-device-pixel-ration: 2) and (min-width: 37.5em),
-		only screen and (min-width: 125em) {
-			background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/background-1.png');
-		}
+		@include resolution{
+            background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/background-1.png');
+        }
 	}
 
 	&__right{
@@ -38,10 +36,8 @@
 		background-size: cover;
 		background-repeat: no-repeat;
 
-		@media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
-		only screen and (-webkit-min-device-pixel-ration: 2) and (min-width: 37.5em),
-		only screen and (min-width: 125em) {
-			background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/background-2.png');
-		}
+		@include resolution{
+            background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)), url('../img/background-2.png');
+        }
 	}
 }
