--- a/assets/styles/abstracts/_mixins.scss
+++ b/assets/styles/abstracts/_mixins.scss
@@ -58,3 +58,9 @@
         @media only screen and (min-width: 112.5em){@content}; //1800px
     }
 }
+
+@mixin resolution{
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
+    only screen and (-webkit-min-device-pixel-ration: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {@content};
+}
