--- a/assets/styles/components/_menu.scss
+++ b/assets/styles/components/_menu.scss
@@ -75,11 +75,9 @@
         left: -3rem;
         transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) .5s;
 
-        @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
-		only screen and (-webkit-min-device-pixel-ration: 2) and (min-width: 37.5em),
-		only screen and (min-width: 125em) {
-			background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)),  url('../img/menu-background.jpg');
-		}
+        @include resolution{
+            background-image: linear-gradient(to right, rgba($color-font-primary, .9), rgba($color-font-primary, .9)),  url('../img/menu-background.jpg');
+        }
     }
 
     &__checkbox{
