--- a/assets/styles/abstracts/_mixins.scss
+++ b/assets/styles/abstracts/_mixins.scss
@@ -54,6 +54,10 @@
         @media only screen and (max-width: 75em){@content}; //1200px
     }
 
+    @if $breakpoint == laptop {
+        @media only screen and (max-width: 1400px){@content}; //1400px
+    }
+
     @if $breakpoint == big-desktop {
         @media only screen and (min-width: 112.5em){@content}; //1800px
     }
