--- a/assets/styles/components/_quality.scss
+++ b/assets/styles/components/_quality.scss
@@ -65,7 +65,9 @@
         border: 1px solid $color-grey;
         border-radius: 50%;
         padding: 1rem;
-        margin-right: 8rem;
+        &:not(:last-child){ 
+            margin-right: 8rem;
+        }
         position: relative;
 
         @include respond(phone){
