design padding fix

--- a/assets/styles/abstracts/_mixins.scss
+++ b/assets/styles/abstracts/_mixins.scss
@@ -55,7 +55,7 @@
     }
 
     @if $breakpoint == laptop {
-        @media only screen and (max-width: 1400px){@content}; //1400px
+        @media only screen and (max-width: 87.5em){@content}; //1400px
     }
 
     @if $breakpoint == big-desktop {
